# logistics

./: .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  Makefile  PRD.md  README.md  docker-compose.yaml  go.mod  location_data.html  mkdocs.yml  pyproject.toml
.github/workflows/: bazel.yml  docker.yml  docs.yml  test.yml
consumer/: Dockerfile  deployment.yaml  go.mod  go.sum  query.sql  schema.sql  sqlc.yaml
consumer/cmd/: main.go
consumer/db/: bulkinsert.go  copyfrom.go  db.go  models.go  query.sql.go
consumer/migrate-jobs/: migrate-job.yaml  migrations-configmap.yaml
consumer/service/: handler.go  kafka.go  trackpoint.go
consumer/timescaledb/: Dockerfile  deployment.yaml
docs/: getting-started.md  index.md
docs/guides/: minikube-quickstart.md  tls-guide.md
docs/reference/: rule-engine-prd.md
docs/services/: consumer.md  notification.md  ruleengine.md
frontend/: .env.example  deployment.yaml  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
infra/: kafka.yaml
k8s/: gateway-api-demo.yaml  kafka.yaml  rate-limit-plugin.yaml  redis.yaml  test-service.yaml  values.yaml
makefiles/: frontend.mk  kafka.mk  notification.mk  ruleengine.mk  telemetry.mk  timescaledb.mk  tls.mk
notification/: Dockerfile  deployment.yaml  go.mod  go.sum  query.sql  schema.sql
ruleengine/: Dockerfile  deployment.yaml  go.mod  go.sum  query.sql  schema.sql  seed.sql  sqlc.yaml
telemetry/: BUILD  Dockerfile  Makefile  README.md  deployment.yaml  go.mod  handler.go  main.go  producer.go  trackpoint.go
(+57 files in other folders)
